form basic layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,64 @@
 </head>
 
 <body>
+
+
+
+
 	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<form class="form">
+		
+		<p><strong>Employee Name</strong></p>
+		<input type="text" name="employee-name">
+
+		<br><br>
+
+		<p><strong>Role</strong></p>		
+		<input type="text" name="role">
+		
+		<br><br>
+
+		<p><strong>Start Date (DD/MM/YY - ex: 01/01/89)<strong></p>	
+		<input type="text" name="start-date">
+
+		<br><br>
+
+		<p><strong>Monthly Rate</strong></p>	
+		<input type="text" name="monthly-rate">
+
+		<br><br>
+
+		<div type="submit" id="submit-btn" class="btn btn-primary" name="submit">Submit</div>
+
+		
+	</form>
+
 
 </body>
 </html>
