--- a/index.html
+++ b/index.html
@@ -15,38 +15,23 @@
 </head>
 
 <body>
+	<div class="container">
+		<div class="jumbotron" style="background-color: grey ; color: ;">
+			<div class="info-icons">
+					<h1 class= "text-center">
+					<strong>
+					<a href="#"><i class="fa fa-newspaper-o" style="color:white"></i></a>	
+					Employee Data Management
+					<h2> A comprehensive Directory of Employee Billable Hours</h2>
+					</strong>
+				</h1>
+			</div>
+		</div>
+	</div>
 
 
 
-
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<form class="form">
+	<form class="form">
 		
 		<p><strong>Employee Name</strong></p>
 		<input type="text" name="employee-name">
